# gliomascope-rx

./: .gitignore  CLAUDE.md  README.md  result.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  app.py  config.py  mlflow_logger.py  pyproject.toml  run.sh
backend/llm_service/: llm_client.py
backend/model_inference/: pipeline.py  predict.py  preprocess.py  visualize.py  worker_infer.py
backend/notebooks/: README.md  gliomascope_rx.ipynb  kernel-metadata.json  requirements.txt
backend/utils/: logger.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AIConsole.tsx  AboutModal.tsx  CosmosAnimation.tsx  EnhancementConsole.tsx  EnhancementTools.tsx  FeatureGrid.tsx  Gallery.tsx  ImagePanel.tsx  ImageViewer.tsx  LLMConsole.tsx  Navbar.tsx  ParticleBackground.tsx  ReportModal.tsx  TumorPanel.tsx
frontend/src/hooks/: useImageProcessor.ts  useLLMAssistant.ts
frontend/src/services/: mock.ts
mlops/mlflow/artifacts/exports/BraTS20_Training_083/: slice_94.npz
mlops/mlflow/artifacts/exports/BraTS20_Training_334/: slice_101.npz
research/: image-enhancement-guide.md  image_enhancement_formulas.csv
