[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gliomascope-rx-backend"
version = "0.1.0"
description = "Backend for GliomaScope RX"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.119.0",
    "kaggle>=1.7.4.5",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.33.0",
]

[project.urls]
"Homepage" = "https://github.com/imchandanmohan/gliomascope-rx" # Replace with your actual URL
"Bug Tracker" = "https://github.com/imchandanmohan/gliomascope-rx/issues" # Replace with your actual URL
