[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gliomascope-rx-backend"
version = "0.1.0"
description = "Backend for GliomaScope RX"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "matplotlib>=3.8",
    "tensorflow>=2.14",
    "nibabel>=5.2",
    "mlflow>=2.14",
    "loguru>=0.7",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "opencv-python>=4.11.0.86",
    "python-dotenv",
    "torch",
    "torchvision",
    "torchaudio",
    "onnxruntime>=1.23.1",
]

[project.urls]
"Homepage" = "https://github.com/imchandanmohan/gliomascope-rx"
"Bug Tracker" = "https://github.com/imchandanmohan/gliomascope-rx/issues"

[tool.setuptools]
packages = ["utils", "llm_service", "model_inference"]
py-modules = ["app", "mlflow_logger"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
